--- a/index.html
+++ b/index.html
@@ -13,7 +13,53 @@
 	</head>
 	<body>
 		<section class="plans">
-			<h1 class="plans__heading">Hello World</h1>
+			<div class="card">
+				<!-- Front side -->
+				<div class="card__front card__front--1">
+					<div class="card__heading card__heading--1">
+						<span class="card__heading--span"> Basic </span>
+					</div>
+					<div class="card__text">
+						<ul>
+							<li>Good video quality</li>
+							<li>720p resolution</li>
+							<li>TV, Computer, Mobile and Tablet Support</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="card">
+				<!-- Front side -->
+				<div class="card__front card__front--2">
+					<div class="card__heading card__heading--2">
+						<span class="card__heading--span"> Pro </span>
+					</div>
+					<div class="card__text">
+						<ul>
+							<li>Better video quality</li>
+							<li>1080p resolution</li>
+							<li>TV, Computer, Mobile and Tablet Support</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="card">
+				<!-- Front side -->
+				<div class="card__front card__front--3">
+					<div class="card__heading card__heading--3">
+						<span class="card__heading--span"> Premium </span>
+					</div>
+					<div class="card__text">
+						<ul>
+							<li>Best video quality</li>
+							<li>4K+HDR Resolution</li>
+							<li>TV, Computer, Mobile and Tablet Support</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
