--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<section class="plans">
 			<div class="card">
 				<!-- Front side -->
-				<div class="card__front card__front--1">
+				<div class="card__side card__side--front card__side--front-1">
 					<div class="card__heading card__heading--1">
 						<span class="card__heading--span"> Basic </span>
 					</div>
@@ -27,11 +27,22 @@
 						</ul>
 					</div>
 				</div>
+
+				<!-- Back side -->
+				<div class="card__side card__side--back card__side--back-1">
+					<div class="card__cta">
+						<div class="card__price-box">
+							<p class="card__price-only">Only</p>
+							<p class="card__price-value">$10</p>
+							<a href="#" class="btn btn--white">Get now!</a>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="card">
 				<!-- Front side -->
-				<div class="card__front card__front--2">
+				<div class="card__side card__side--front card__side--front-2">
 					<div class="card__heading card__heading--2">
 						<span class="card__heading--span"> Pro </span>
 					</div>
@@ -43,11 +54,22 @@
 						</ul>
 					</div>
 				</div>
+
+				<!-- Back side -->
+				<div class="card__side card__side--back card__side--back-2">
+					<div class="card__cta">
+						<div class="card__price-box">
+							<p class="card__price-only">Only</p>
+							<p class="card__price-value">$15</p>
+							<a href="#" class="btn btn--white">Get now!</a>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="card">
 				<!-- Front side -->
-				<div class="card__front card__front--3">
+				<div class="card__side card__side--front card__side--front-3">
 					<div class="card__heading card__heading--3">
 						<span class="card__heading--span"> Premium </span>
 					</div>
@@ -57,6 +79,16 @@
 							<li>4K+HDR Resolution</li>
 							<li>TV, Computer, Mobile and Tablet Support</li>
 						</ul>
+					</div>
+				</div>
+				<!-- Back side -->
+				<div class="card__side card__side--back card__side--back-3">
+					<div class="card__cta">
+						<div class="card__price-box">
+							<p class="card__price-only">Only</p>
+							<p class="card__price-value">$20</p>
+							<a href="#" class="btn btn--white">Get now!</a>
+						</div>
 					</div>
 				</div>
 			</div>
